added to index.html file and style.css

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Shadow</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   
 </div>
   <body>
+    
     <div class="header">
         <strong><h2> Shadow</h2></strong>
       <!-- Headers -->
-      <h1>Shadow</h1>
     </header>
 
     <section>
@@ -21,8 +21,7 @@
       <img src="https://via.placeholder.com/200" alt="placeholder image"/>
 
       <!-- Paragraph -->
-      <p>This is a paragraph.</p>
-      <p><strong>Clients Info</strong>.</p>
+      <p>Welcome to Shadow! We apprciate your business. If you have any comments or requests contact us and we will get back to you in 4-5 business days.</p>
     
       <div class="container">
         <div style="text-align:center">
@@ -31,9 +30,6 @@
         </div>
         <div class="row">
           <div class="column">
-            <img src="/w3images/map.jpg" style="width:100%">
-          </div>
-          <div class="column">
             <form action="/action_page.php">
               <label for="fname">First Name</label>
               <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -41,9 +37,9 @@
               <input type="text" id="lname" name="lastname" placeholder="Your last name..">
               <label for="country">Country</label>
               <select id="country" name="country">
+                <option value="usa">USA</option>
                 <option value="australia">Australia</option>
                 <option value="canada">Canada</option>
-                <option value="usa">USA</option>
               </select>
               <label for="subject">Subject</label>
               <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
